--- a/Nomina/Properties/Resources.resx
+++ b/Nomina/Properties/Resources.resx
@@ -117,4 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="A;adirporfa1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>"..\Resources\A;adirporfa1.png";System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="archivo-excel1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\archivo-excel1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="archivo-excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\archivo-excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Cerrar2UI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Cerrar2UI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="A;adirporfa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>"..\Resources\A;adirporfa.png";System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="archivo-excel2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\archivo-excel2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CErrarUI2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CErrarUI2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cerrarventanaUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cerrarventanaUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MInimizarUI" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MInimizarUI.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="calculadora" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\calculadora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
